# EMD

./: .gitignore  EMD.cabal  LICENSE  README.md  TODO.md  build  haskemd.py  stack.yaml  start.sh  test.py
app/: Main.hs  Mat.hs  Test.hs
calibrate/: calibrate  calibrate.py  interpret.py
haskemd/: calibrate.py  interpret.py  setup.py
haskemd/haskemd/: __init__.py
haskemd/haskemd.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: Edmonds.hs  Matrixbmp.hs  ReadDist.hs  ReadPNG.hs  listbmp.hs
