name:                EMD
version:             0.1.0.0
synopsis:            Earth mover's distance on Nvidia GPUs
description:         Please see README.md
homepage:            https://github.com/vmchale/EMD#readme
license:             BSD3
license-file:        LICENSE
author:              Author name Vanessa McHale
maintainer:          tmchale@wisc.edu
copyright:           2016 Author name Vanessa McHale
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Edmonds
                     , Matrixbmp
                     , ReadDist
                     , ReadPNG
  build-depends:       base >= 4.7 && < 5
                     , accelerate-cuda >= 0.15.0.0
                     , accelerate-io
                     , accelerate
                     , bmp
                     , random
                     , repa-devil
                     , mtl
                     , repa >= 3.3.1.2
  default-language:    Haskell2010

executable EMD-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , EMD
  default-language:    Haskell2010

executable Mat-exe
  hs-source-dirs:      app
  main-is:             Mat.hs
  ghc-options:         -threaded -O2 -fllvm -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , EMD
  default-language:    Haskell2010

executable Test-exe
  hs-source-dirs:      app
  main-is:             Test.hs
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , EMD
  default-language:    Haskell2010

test-suite EMD-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , EMD
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vmchale/EMD
